--- a/templates/ImageSearchListTemplate.html
+++ b/templates/ImageSearchListTemplate.html
@@ -5,7 +5,7 @@
 </form>
 
 {% for image in images %}
-<image src={{ image.previewURL }} height="100" width="150"></image>
+    <a href="{% url 'image-detail-url' pk=image.id%}"><image src={{ image.previewURL }} height="100" width="150"></image> </a>
 {% endfor %}
 
 <div>
